fixed code spacing

--- a/app/assets/stylesheets/blogs.css.sass
+++ b/app/assets/stylesheets/blogs.css.sass
@@ -22,6 +22,7 @@
     border: 1px solid $dark-grey
     @include radius(4px)
     padding: .5rem 1rem
+    margin-bottom: 1rem
     
     pre
       overflow-x: scroll 
